--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,12 +101,71 @@
         cursor: pointer;
     }
     
+    .header__menu .menu__list .list--item .drop__menu li {}
+    
+    .header__menu .menu__list .list--item .drop__menu .dropNeo {
+        position: relative;
+    }
+    
+    @media (min-width:992px) {
+        .header__menu .menu__list .list--item .drop__menu .dropNeo:hover {
+            padding-right: 3rem;
+        }
+        .header__menu .menu__list .list--item .drop__menu .dropNeo:hover .drop__menu2 {
+            display: block;
+        }
+        .header__menu .menu__list .list--item .drop__menu .drop__menu2 {
+            position: absolute;
+            left: 100%;
+            border-radius: 0.5rem;
+            top: 0;
+            padding-right: 5rem;
+            display: none;
+            transition: 0.3s;
+            -webkit-box-shadow: -2px 3px 13px -4px rgba(122, 122, 122, 0.575);
+            -moz-box-shadow: -2px 3px 13px -4px rgba(122, 122, 122, 0.596);
+            box-shadow: -2px 3px 13px -4px rgba(122, 122, 122, 0.61);
+            background-color: rgb(255, 255, 255);
+        }
+    }
+    
+    @media (max-width:991px) {
+        .header__menu .menu__list .list--item .drop__menu .drop__menu2 {
+            position: static;
+            max-height: 0;
+            border-radius: 0.5rem;
+            margin-top: 1rem;
+            transition: 0.3s;
+            overflow: hidden;
+        }
+        .header__menu .menu__list .list--item .drop__menu .showmenu2 {
+            max-height: 100vh;
+            -webkit-box-shadow: 1px 11px 33px 8px rgba(0, 0, 0, 0.233);
+            -moz-box-shadow: 1px 11px 33px 8px rgba(0, 0, 0, 0.24);
+            box-shadow: 1px 11px 33px 8px rgba(0, 0, 0, 0.253);
+        }
+    }
+    
     .header__menu .menu__list .list--item .drop__menu li {
         font-size: 15px;
         transition: ease-in 250ms;
     }
     
-    .header__menu .menu__list .list--item .drop__menu li:hover {
+    .header__menu .menu__list .list--item .drop__menu li h5 {
+        font-size: 15px;
+        font-weight: 400;
+    }
+    
+    .header__menu .menu__list .list--item .drop__menu>li:hover {
+        color: #ff512f;
+        padding-left: 2.8rem;
+    }
+    
+    .header__menu .menu__list .list--item .drop__menu>li:hover ul {
+        color: #1C1D3E;
+    }
+    
+    .header__menu .menu__list .list--item .drop__menu .drop__menu2 li:hover {
         color: #ff512f;
         padding-left: 2.8rem;
     }
@@ -1566,5 +1625,14 @@
         }
         .clients h2 {
             font-size: 3rem;
+        }
+    }
+    
+    @media(max-width:767px) {
+        .clients__slider {
+            order: 1;
+        }
+        .clients__control {
+            order: 2;
         }
     }
