--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
     }
     
     html {
+        scroll-behavior: smooth;
         font-size: 62.5%;
     }
     
@@ -23,8 +24,15 @@
     }
     
     .wrapper {
+        position: relative;
         max-width: 100%;
         overflow: hidden;
+    }
+    
+    .scroll--top {
+        position: fixed;
+        right: 2rem;
+        bottom: 2rem;
     }
     /* =================style header================================ */
     
@@ -1625,6 +1633,9 @@
         }
         .clients h2 {
             font-size: 3rem;
+        }
+        .scroll--top img {
+            width: 40px;
         }
     }
     
