--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -6,6 +6,27 @@ body {
     z-index: 9999;
 }
 
+.wrapper--loading {
+    position: fixed;
+    z-index: 99999;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    height: 100vh;
+    transition: 0.9s;
+    background-color: rgb(0, 0, 0);
+}
+
+#wrapper .wrapper--disable {
+    opacity: 0;
+    z-index: -999;
+}
+
+.wrapper .wrapper--loading img {
+    margin: auto;
+}
+
 @media(min-width:992px) {
     .header {
         width: 96%;
