--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,27 @@
         overflow: hidden;
     }
     
+    .wrapper--loading {
+        position: fixed;
+        z-index: 99999;
+        width: 100%;
+        top: 0;
+        left: 0;
+        display: flex;
+        height: 100vh;
+        transition: 0.9s;
+        background-color: rgb(0, 0, 0);
+    }
+    
+    #wrapper .wrapper--disable {
+        opacity: 0;
+        z-index: -999;
+    }
+    
+    .wrapper .wrapper--loading img {
+        margin: auto;
+    }
+    
     .scroll--top {
         position: fixed;
         right: 2rem;
